deps/zarrs_jl/zarrs_jl.h

/**
 * Opaque handle types — allocated and managed by libzarrs_jl.
 * Callers interact with these only via pointers.
 */
typedef struct StorageHandle StorageHandle;
typedef struct IcRepoHandle IcRepoHandle;
typedef struct IcSessionHandle IcSessionHandle;
enum ZarrsResult {
  ZARRS_SUCCESS = 0,
  ZARRS_ERROR_NULL_PTR = -1,
  ZARRS_ERROR_STORAGE = -2,
  ZARRS_ERROR_ARRAY = -3,
  ZARRS_ERROR_BUFFER_LENGTH = -4,
  ZARRS_ERROR_INVALID_INDICES = -5,
  ZARRS_ERROR_NODE_PATH = -6,
  ZARRS_ERROR_STORE_PREFIX = -7,
  ZARRS_ERROR_INVALID_METADATA = -8,
  ZARRS_ERROR_STORAGE_CAPABILITY = -9,
  ZARRS_ERROR_UNKNOWN_CHUNK_GRID_SHAPE = -10,
  ZARRS_ERROR_UNKNOWN_INTERSECTING_CHUNKS = -11,
  ZARRS_ERROR_UNSUPPORTED_DATA_TYPE = -12,
  ZARRS_ERROR_GROUP = -13,
  ZARRS_ERROR_INCOMPATIBLE_DIMENSIONALITY = -14,
};
typedef int32_t ZarrsResult;
void zarrsFreeString(char *s);
/**
 * Create a writable session on a branch.
 */
ZarrsResult zarrsIcechunkWritableSession(IcRepoHandle *repo,
                                         const char *branch,
                                         IcSessionHandle **pSession);
ZarrsResult zarrsIcechunkDestroySession(IcSessionHandle *session);
/**
 * Create a zarrs-compatible StorageHandle from an Icechunk session.
 * This bridges the Icechunk Store to the zarrs sync storage interface.
 */
ZarrsResult zarrsIcechunkSessionGetStorage(IcSessionHandle *session, StorageHandle **pStorage);
/**
 * Check if a session is read-only.
 */
ZarrsResult zarrsIcechunkSessionReadOnly(IcSessionHandle *session, int32_t *pReadOnly);
/**
 * Commit a writable session with a message, returning a snapshot ID string.
 */
ZarrsResult zarrsIcechunkSessionCommit(IcSessionHandle *session,
                                       const char *message,
                                       char **pSnapshotId);
/**
 * Check if a session has uncommitted changes.
 */
ZarrsResult zarrsIcechunkSessionHasChanges(IcSessionHandle *session, int32_t *pHasChanges);