src/libzarrs_api.jl


### Prototype
```c
ZarrsResult zarrsIcechunkWritableSession(IcRepoHandle *repo, const char *branch, IcSessionHandle **pSession);
```
"""
function zarrs_icechunk_writable_session(repo, branch)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkWritableSession, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcRepoHandle}, Cstring, Ptr{Ptr{IcSessionHandle}}),
        repo,
        branch,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_destroy_session(session)

### Prototype
```c
ZarrsResult zarrsIcechunkDestroySession(IcSessionHandle *session);
```
"""
function zarrs_icechunk_destroy_session(session)
    _result = ccall(
        (:zarrsIcechunkDestroySession, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcSessionHandle},),
        session,
    )
    check_error(_result)
end

"""
    zarrs_icechunk_session_get_storage(session)

Create a zarrs-compatible [`StorageHandle`](@ref) from an Icechunk session. This bridges the Icechunk Store to the zarrs sync storage interface.

### Prototype
```c
ZarrsResult zarrsIcechunkSessionGetStorage(IcSessionHandle *session, StorageHandle **pStorage);
```
"""
function zarrs_icechunk_session_get_storage(session)
    _handle_ptr = Ref{Ptr{Cvoid}}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkSessionGetStorage, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcSessionHandle}, Ptr{Ptr{StorageHandle}}),
        session,
        _handle_ptr,
    )
    check_error(_result)
    return _handle_ptr[]
end

"""
    zarrs_icechunk_session_read_only(session)

Check if a session is read-only.

### Prototype
```c
ZarrsResult zarrsIcechunkSessionReadOnly(IcSessionHandle *session, int32_t *pReadOnly);
```
"""
function zarrs_icechunk_session_read_only(session)
    _out_ref = Ref{Int32}(zero(Int32))
    _result = ccall(
        (:zarrsIcechunkSessionReadOnly, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcSessionHandle}, Ptr{Int32}),
        session,
        _out_ref,
    )
    check_error(_result)
    return _out_ref[]
end

"""
    zarrs_icechunk_session_commit(session, message)

Commit a writable session with a message, returning a snapshot ID string.

### Prototype
```c
ZarrsResult zarrsIcechunkSessionCommit(IcSessionHandle *session, const char *message, char **pSnapshotId);
```
"""
function zarrs_icechunk_session_commit(session, message)
    _str_ptr = Ref{Cstring}(C_NULL)
    _result = ccall(
        (:zarrsIcechunkSessionCommit, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcSessionHandle}, Cstring, Ptr{Cstring}),
        session,
        message,
        _str_ptr,
    )
    check_error(_result)
    if _str_ptr[] == C_NULL
        return nothing
    end
    _s = unsafe_string(_str_ptr[])
    ccall((:zarrsFreeString, libzarrs_jl), Cvoid, (Cstring,), _str_ptr[])
    return _s
end

"""
    zarrs_icechunk_session_has_changes(session)

Check if a session has uncommitted changes.

### Prototype
```c
ZarrsResult zarrsIcechunkSessionHasChanges(IcSessionHandle *session, int32_t *pHasChanges);
```
"""
function zarrs_icechunk_session_has_changes(session)
    _out_ref = Ref{Int32}(zero(Int32))
    _result = ccall(
        (:zarrsIcechunkSessionHasChanges, libzarrs_jl),
        ZarrsResult,
        (Ptr{IcSessionHandle}, Ptr{Int32}),
        session,
        _out_ref,
    )
    check_error(_result)
    return _out_ref[]
end



end # module API
